PS-800 upgrade keycloak plugins